# linux-fingerprint-r503

./: .gitignore  LICENSE  README.md  SPEC.md
.github/workflows/: ci.yml
docs/: PATH_DECISION.md  REVIEW-2026-05-28.md  SECURITY-AUDIT-2026-05-28-VALIDATION.html  SECURITY-AUDIT-2026-05-28.html  TROUBLESHOOTING.md
firmware/: README.md
firmware/r503fp/: eeprom.h  framing.h  r503fp.ino  siphash.h
firmware/r503fp_baudsweep/: r503fp_baudsweep.ino
firmware/r503fp_clean/: r503fp_clean.ino
firmware/r503fp_listen/: r503fp_listen.ino
firmware/r503fp_loopback/: r503fp_loopback.ino
firmware/r503fp_ping/: r503fp_ping.ino
firmware/r503fp_prod/: r503fp_prod.ino
firmware/r503fp_rawdump/: r503fp_rawdump.ino
firmware/r503fp_stub/: r503fp_stub.ino
firmware/r503fp_touchwake/: r503fp_touchwake.ino
firmware/r503fp_txspam/: r503fp_txspam.ino
firmware/r503fp_wipe/: r503fp_wipe.ino
pcside/daemon/: Cargo.toml  test_smoke.py
pcside/daemon/examples/: framing_xverify.rs  siphash_cli.rs  tamper_test.rs  tpm_smoketest.rs
pcside/daemon/fuzz/: Cargo.toml
pcside/daemon/fuzz/fuzz_targets/: framing.rs
pcside/daemon/src/: auth.rs  crypto.rs  dbus_iface.rs  error.rs  framing.rs  keystore.rs  lib.rs  main.rs  pairing.rs  sensor.rs  sensor_actor.rs  state.rs  storage.rs  tpm.rs
pcside/daemon/tests/: crossimpl_siphash.rs  fuzz_framing_smoke.rs
pcside/prototype/: r503ctl.py
