[package]
name = "r503d"
version = "1.1.0"
edition = "2024"
description = "fprintd-replacement daemon for the R503 fingerprint reader over USB-serial. v1.0 = authenticated wire protocol (SPEC §13) cutover; v1.1 = counter-ceiling hardening (firmware DoS-2). Firmware must be fw=1.0+ (fw=1.1+ for the ceiling guard)."
license = "MIT"
repository = "https://github.com/matpb/linux-fingerprint-r503"
readme = "../../README.md"

[[bin]]
name = "r503d"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
zbus_polkit = "5"
# Re-exported transitively by zbus_polkit; pulled in explicitly so `auth.rs`
# can call `BitFlag::empty()` to pass "no flags" to `check_authorization`.
enumflags2 = "0.7"
serialport = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
libc = "0.2"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tss-esapi = "7.7.0"
# Crypto-posture hardening (SPEC §13 review pass, 2026-05-28).
# subtle: formally constant-time MAC compare (replaces hand-rolled XOR + branch).
# zeroize: scrub key bytes from RAM/swap on drop.
# getrandom: SPEC §13.2 names getrandom(2) for key generation; use the wrapper
#   so the syscall is invoked directly (blocks until kernel pool is seeded).
# rpassword: optional TPM-seal PIN prompt (SPEC §13.12 follow-up).
subtle = "2"
zeroize = { version = "1", features = ["derive"] }
getrandom = "0.3"
rpassword = "7"

[dev-dependencies]
# Independent third-party SipHash implementation, cross-validated against the
# in-tree hand-rolled crypto.rs to make divergence loud in CI (SPEC §13 review).
siphasher = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
# Trap integer overflow in release too (it's already on in debug). For a
# security daemon, a silent wraparound in counter arithmetic is worse than a
# loud panic — see the DoS-2 counter-wrap fix (security audit 2026-05-28).
overflow-checks = true
